--- a/front-end/src/app/pages/me/me.page.scss
+++ b/front-end/src/app/pages/me/me.page.scss
@@ -1,6 +1,19 @@
+ion-content{
+
+  --ion-background-color:#f5f5f5;
+  div{
+      --ion-background-color:#ffffff;
+  }
+}
 .profile-photo {
     border-radius: 50% !important;
     overflow: hidden;
+    }
+
+    .ion-icon-1 {
+      font-size: 25px;
+      color:  var(--ion-color-primary);
+      padding-right: 20px;
     }
 
     // ion-item::part(native) {
