--- a/front-end/src/app/pages/member-action/member-action.page.scss
+++ b/front-end/src/app/pages/member-action/member-action.page.scss
@@ -32,6 +32,14 @@ ion-header {
 
 }
 
+ion-content{
+
+  --ion-background-color:#f5f5f5;
+  div{
+      --ion-background-color:#ffffff;
+  }
+}
+
 .profile-photo {
     border-radius: 50% !important;
     overflow: hidden;
