--- a/front-end/src/app/pages/memberinfor/memberinfor.page.scss
+++ b/front-end/src/app/pages/memberinfor/memberinfor.page.scss
@@ -1,3 +1,11 @@
+ion-content{
+
+  --ion-background-color:#f5f5f5;
+  div{
+    --ion-background-color:#ffffff;
+}
+}
+
 .profile-photo {
     border-radius: 50% !important;
     overflow: hidden;
