--- a/front-end/src/app/static/terms-condition/terms-condition.page.html
+++ b/front-end/src/app/static/terms-condition/terms-condition.page.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
-    <html>
-    <head>
-      <meta charset='utf-8'>
-      <meta name='viewport' content='width=device-width'>
-      <title>Terms &amp; Conditions</title>
-      <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
-    </head>
-    <body>
-    <strong>Terms &amp; Conditions</strong> <p>
+
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button text="Back" defaultHref="settings"> </ion-back-button>
+    </ion-buttons>
+    <ion-title>Terms & Conditions</ion-title>
+  </ion-toolbar>  
+</ion-header>
+    <ion-content>
+      <div>
+                <p>
                   By downloading or using the app, these terms will
                   automatically apply to you – you should make sure therefore
                   that you read them carefully before using the app. You’re not
@@ -51,7 +53,9 @@
                   cannot take responsibility for the app not working at full
                   functionality if you don’t have access to Wi-Fi, and you don’t
                   have any of your data allowance left.
-                </p> <p></p> <p>
+                </p> 
+                <p></p> 
+                <p>
                   If you’re using the app outside of an area with Wi-Fi, you
                   should remember that the terms of the agreement with your
                   mobile network provider will still apply. As a result, you may
@@ -64,13 +68,15 @@
                   you are not the bill payer for the device on which you’re
                   using the app, please be aware that we assume that you have
                   received permission from the bill payer for using the app.
-                </p> <p>
+                </p> 
+                <p>
                   Along the same lines, KJIOP cannot always take
                   responsibility for the way you use the app i.e. You need to
                   make sure that your device stays charged – if it runs out of
                   battery and you can’t turn it on to avail the Service,
                   KJIOP cannot accept responsibility.
-                </p> <p>
+                </p> 
+                <p>
                   With respect to KJIOP’s responsibility for your
                   use of the app, when you’re using the app, it’s important to
                   bear in mind that although we endeavor to ensure that it is
@@ -79,7 +85,8 @@
                   to you. KJIOP accepts no liability for any
                   loss, direct or indirect, you experience as a result of
                   relying wholly on this functionality of the app.
-                </p> <p>
+                </p> 
+                <p>
                   At some point, we may wish to update the app. The app is
                   currently available on Android &amp; iOS – the requirements for the 
                   both systems(and for any additional systems we
@@ -96,20 +103,26 @@
                   rights and licenses granted to you in these terms will end;
                   (b) you must stop using the app, and (if needed) delete it
                   from your device.
-                </p> <p><strong>Changes to This Terms and Conditions</strong></p> <p>
+                </p> 
+                <p><strong>Changes to This Terms and Conditions</strong></p> 
+                <p>
                   We may update our Terms and Conditions
                   from time to time. Thus, you are advised to review this page
                   periodically for any changes. We will
                   notify you of any changes by posting the new Terms and
                   Conditions on this page.
-                </p> <p>
+                </p> 
+                <p>
                   These terms and conditions are effective as of 2023-04-05
-                </p> <p><strong>Contact Us</strong></p> 
+                </p> 
+                <p><strong>Contact Us</strong></p> 
                 <p>
                   If you have any questions or suggestions about our
                   Terms and Conditions, do not hesitate to contact us
                   at JXUUHG@gmail.com.
                 </p> 
-        </body>
-    </html>
+
+              </div>
+        </ion-content>
+     
       
