--- a/front-end/src/app/pages/memberinfor/memberinfor.page.html
+++ b/front-end/src/app/pages/memberinfor/memberinfor.page.html
@@ -70,11 +70,11 @@ class="ion-no-border"
   </div> 
 
 
-  <div class="div-0">
-    <ion-label color="dark"><h2>Recharge</h2></ion-label>  
-    <ion-item>        
-      <ion-button fill="solid"  expand="block" (click)="rechargeRequestAlert()">Recharge Request</ion-button>
-    </ion-item>  
+  <div class="ion-padding">
+     
+     
+    <ion-button fill="solid"  expand="block" (click)="rechargeRequestAlert()">Recharge Request</ion-button>
+
     
   </div> 
 
