--- a/front-end/src/app/pages/me/me.page.scss
+++ b/front-end/src/app/pages/me/me.page.scss
@@ -37,7 +37,7 @@ ion-content{
          
         // background;          
         
-        margin-top:40px;
+        margin-top:10px;
         margin-right: 10px;
         margin-left: 10px;
 
@@ -114,3 +114,46 @@ ion-content{
     border: 0.1px solid #f5f5f5;
     min-height: 100px; 
   }
+
+  .ion-item::part(native) {
+    // background: #ffffff;
+    // color: #fff;
+    height:8rem;
+  
+    // border-color: #fff;
+    // border-style: dashed;
+    border-width: 1px;  
+    border-radius: 20px;
+  }
+  
+  .ion-item::part(detail-icon) {
+    // color: white;
+    opacity: 50;
+    font-size: 20px;
+  }
+
+
+  .ion-item-feedback::part(native) {
+    background: #ffffff;
+    // color: #fff;
+    height:6rem;
+    margin-left: 10px;
+    margin-right: 50px;
+  
+    // border-color: #fff;
+    // border-style: dashed;
+    border-width: 1px;  
+    border-radius: 20px;
+  }
+  
+  .ion-item-feedback::part(detail-icon) {
+    color: white;
+    opacity: 1;
+    font-size: 20px;
+  }
+  
+  ion-textarea.custom .helper-text,
+  ion-textarea.custom .counter {
+    color: #373737;
+  }
+  
