--- a/front-end/src/app/pages/member-add/member-add.page.html
+++ b/front-end/src/app/pages/member-add/member-add.page.html
@@ -1,7 +1,11 @@
 <ion-header>
   <ion-toolbar class="ios hydrated">
+    <ion-buttons slot="start">
+      <ion-button color="medium" (click)="BacktoList()" [strong]="true" >Cancel</ion-button>
+    </ion-buttons>
     <ion-title class="ios title-ios hydrated">Add Member Detail</ion-title>
   </ion-toolbar>
+  
 </ion-header>
 
 <ion-content class="ion-padding" style="padding: 7.5%" >
