--- a/front-end/src/app/pages/member-details/member-details.page.html
+++ b/front-end/src/app/pages/member-details/member-details.page.html
@@ -23,7 +23,7 @@
 
   <ion-list lines="none" [inset]="true">
     <ion-list-header>
-      <ion-icon name="person-circle-outline"></ion-icon>
+      <!-- <ion-icon name="person-circle-outline"></ion-icon> -->
       <ion-label class="ion-padding">{{member.m_name}}</ion-label>
       
     </ion-list-header>
@@ -34,7 +34,7 @@
     </ion-item>
     <ion-item>
       <ion-icon name="mail-open-outline"></ion-icon>
-      <ion-label class="ion-padding"> Invitation : {{member.isInviteAccepted}} Accepted </ion-label>
+      <ion-label class="ion-padding"> Invitation Status : {{member.isInviteAccepted}}  </ion-label>
       
     </ion-item>
     <ion-item>
@@ -49,16 +49,13 @@
     <ion-item>
       <ion-icon name="people-outline"></ion-icon>
       <ion-label class="ion-padding">Email id :{{member.email}}</ion-label>
-    </ion-item>
-    
+    </ion-item>  
 
     
          
       <ion-button expand="block" (click)="editMember(member._id)">
         <ion-icon slot="icon-only" name="create"></ion-icon> EDIT
-      </ion-button>
-
-      
+      </ion-button>   
 
       
   </ion-list>
@@ -70,7 +67,7 @@
   <ion-toolbar>
     <!-- <ion-title>Footer</ion-title> -->
     <ion-button expand="block" fill="outline" (click)="AddMore()">
-      <ion-icon  slot ="end" name="arrow-forward"></ion-icon> <strong> Add More Members</strong>
+      <ion-icon slot="end" name="chevron-forward-outline"></ion-icon> <strong> Add More Members</strong>
     </ion-button>
   </ion-toolbar>
 </ion-footer>
