--- a/front-end/src/app/pages/forgetpassword/forgetpassword.page.html
+++ b/front-end/src/app/pages/forgetpassword/forgetpassword.page.html
@@ -5,5 +5,16 @@
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-input label="Email input" type="email" placeholder="email@domain.com"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-input label="Mobile Number" type="tel" placeholder="9876**3210"></ion-input>
+    </ion-item>
+
+    <ion-button (click)="verificationAlert()" fill="outline">Get Verification Code</ion-button>
+  </ion-list>
 
 </ion-content>
