--- a/front-end/src/app/pages/gym-add/gym-add.page.html
+++ b/front-end/src/app/pages/gym-add/gym-add.page.html
@@ -1,5 +1,8 @@
 <ion-header>
-  <ion-toolbar class="ios hydrated">
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-button (click)="gyminformation()" color="strong">Back</ion-button>
+    </ion-buttons>
     <ion-title class="ios title-ios hydrated">Add Gym Information</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -7,7 +10,7 @@
 <ion-content class="ion-padding">
   <app-gmap></app-gmap>
      <form [formGroup] = "gymForm" (ngSubmit)="onSubmit()">
-      
+      <ion-list>
       <ion-item>
         <ion-label position="floating">Gym Name </ion-label>
         <ion-input formControlName="gym_name" type="text" required></ion-input>
@@ -62,7 +65,9 @@
           shape="full" 
           expand="block">Save</ion-button>
       </div>
+    </ion-list>
     </form> 
+
 
    </ion-content>
 
