--- a/front-end/src/app/pages/infor/infor.page.html
+++ b/front-end/src/app/pages/infor/infor.page.html
@@ -71,35 +71,41 @@ class="ion-no-border"
   </div>
 
   <div class="div-0">
-    <ion-label color="dark"><h2>Update</h2> 
-  </ion-label>
-    
-    <ion-item>    
+    <ion-label color="dark"><h2>Update</h2></ion-label>    
       <ion-list>
                        
         <ion-item>
-          <ion-label color="dark"><h2>Want to Update Lock ID?</h2> </ion-label>
-              <ion-toggle aria-label="Primary toggle" color="primary" [disabled]="lockIDtoggleTrigger" [checked]="lockIDtoggleTrigger" (ionChange)="lockIdToggle($event)"></ion-toggle>
+          <ion-label color="dark"><h2>Update Lock ID?</h2> </ion-label>
+              <ion-toggle 
+              aria-label="Primary toggle" 
+              color="primary" [disabled]="lockIDtoggleTrigger" 
+              [checked]="lockIDtoggleTrigger" 
+              (ionChange)="lockIdToggle($event)"></ion-toggle>
         </ion-item>
 
-        <ion-item href="http://localhost:8100/qrlabel">
-            <ion-label color="dark" *ngFor="let gym of gyms" (click)="QrCodeDownLoad(gym._id)"><h2>Download QR code for Selected Gym </h2></ion-label>
+        <ion-item>
+          <ion-label color="dark"><h2>Update Gym Details</h2> </ion-label>
+          <ion-icon (click)="gymUpdate()" slot="end" name="chevron-forward-outline"></ion-icon>
         </ion-item>
 
-      </ion-list>
- 
-    </ion-item>    
+        <ion-item >
+            <ion-label color="dark" ><h2>Download QR code </h2></ion-label>
+            <ion-icon (click)="QrCodeDownLoad()" slot="end" name="chevron-forward-outline"></ion-icon>
+        </ion-item>
+
+      </ion-list>  
   </div>
   
   <div class="div-0">
     <ion-label color="dark"><h2>Gym Setup ...under development..</h2></ion-label>
     <ion-list>
           <ion-item>
-            <ion-label color="dark"> <h2 (click)="addmoregym()">Add More Gym </h2> </ion-label>
+            <ion-label color="dark"> <h2 >Add More Gym </h2> </ion-label>
+            <ion-icon (click)="addmoregym()" slot="end" name="chevron-forward-outline"></ion-icon>
           </ion-item>
 
           <ion-item >      
-            <ion-label color="dark"><h2>Set Members Limit .... 100 Nos.</h2></ion-label>
+            <ion-label color="dark"><h2>Set Gym Capacity ..</h2></ion-label>
           </ion-item>
 
           <ion-item> 
