--- a/front-end/src/app/pages/member-list/member-list.page.scss
+++ b/front-end/src/app/pages/member-list/member-list.page.scss
@@ -278,7 +278,28 @@ ion-item.item.item-block.item-ios,
 ion-badge {
   --background: rgb(0, 4, 255);
   --color: white;
-  --padding-end: 1px;
-  --padding-start: 1px;
-  font-size: 6px;
+  --padding-end: 3px;
+  --padding-start: 3px;
+  --font-size: 10px;
+}
+
+$colors: #a2b9bc,#6b5b95,#feb236, #d64161, #ff7b25, #b2ad7f,  #878f99;
+
+.avatar {
+  color: #eb7575;
+  padding: 2px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  width: 60px;
+  // height: 60px;
+  font-weight: 800;
+  font-size: 50px;
+  }
+
+  @for $i from 1 through length($colors) {
+    .avatar:nth-child(#{length($colors)}n+#{$i}) {
+        background: lighten(nth($colors, $i), 20%);
+    }
 }
