--- a/front-end/src/app/pages/forgetpassword/forgetpassword.page.html
+++ b/front-end/src/app/pages/forgetpassword/forgetpassword.page.html
@@ -1,20 +1,64 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>forgetpassword</ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content>
-  <ion-list>
+
+  <form *ngIf="!isOTPmailed" [formGroup]="authForm" (ngSubmit)="getOTP()">
+    <ion-list>
     <ion-item>
-      <ion-input label="Email input" type="email" placeholder="email@domain.com"></ion-input>
+      <ion-label position="floating"> Email ID </ion-label>
+      <ion-input formControlName="email" type="email" required></ion-input>
     </ion-item>
 
     <ion-item>
-      <ion-input label="Mobile Number" type="tel" placeholder="9876**3210"></ion-input>
+      <ion-label position="floating">Mobile</ion-label>
+      <ion-input formControlName="mobile" type="text" required>
+      </ion-input>
     </ion-item>
 
-    <ion-button (click)="verificationAlert()" fill="outline">Get Verification Code</ion-button>
+    <div>
+        <ion-button 
+        type="submit" 
+        [disabled]="!authForm.valid"
+        color="primary" 
+        shape="full" 
+        expand="block">Get Verification Code</ion-button>
+    </div>
   </ion-list>
+</form>
+
+<form *ngIf="isOTPmailed" [formGroup]="resetForm" (ngSubmit)="resetPassword()">
+  <ion-list>
+  <ion-item>
+    <ion-label position="floating"> Email ID </ion-label>
+    <ion-input formControlName="email" type="email" required></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">OTP</ion-label>
+    <ion-input formControlName="otp" type="text" required>
+    </ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label position="floating">New Password</ion-label>
+    <ion-input formControlName="newPassword" type="text" required>
+    </ion-input>
+  </ion-item>
+
+  <div>
+      <ion-button 
+      type="submit" 
+      [disabled]="!resetForm.valid"
+      color="primary" 
+      shape="full" 
+      expand="block">Change Password</ion-button>
+  </div>
+</ion-list>
+</form>
+
+<p class="ion-text-right">Back to <strong routerLink="/login">login</strong></p>
+
+  <div *ngIf = "serverErrorMessage">
+    {{serverErrorMessage}}
+  </div>
 
 </ion-content>
